--- a/Jisshu/template/req.html
+++ b/Jisshu/template/req.html
@@ -1,5 +1,5 @@
 
-<!Code Developer By JISSHU_BOTS >
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -85,13 +85,13 @@
                         <div class="abt-sec" id="channels">
                             <h1>JOIN OUR <span>TELEGRAM</span> CHANNELS</h1>
                             <div class="links chnl-link">
-                                <a class="magnet" href="https://t.me/JISSHU_BOTS">
-                                    <button>BOTS CHANNEL</button>
+                                <a class="magnet" href="https://t.me/moviiieeeesss">
+                                    <button>CHANNEL</button>
                                 </a>
-                                <a class="magnet" href="https://t.me/Jisshu_support">
+                                <a class="magnet" href="https://t.me/venom_support_bot2">
                                     <button>SUPPORT GROUP</button>
                                 </a>
-                                <a class="magnet" href="https://t.me/Jisshu_Originals">
+                                <a class="magnet" href="https://t.me/+CKWYm9jJ2DEyZmNl">
                                     <button>MOVIES CHANNEL</button
                                 </a>
                                 <!---<a class="magnet" href="https://t.me/EpitomeQuality">
@@ -103,7 +103,7 @@
                         <div class="abt-sec" id="contact">
                             <p style="text-align: center;">Report Bugs and Contact us on Telegram Below</p>
                             <div class="links contact">
-                                <a href="https://t.me/JisshuDeveloperBot">
+                                <a href="https://t.me/venom_support_bot2">
                                     <button>CONTACT</button>
                                 </a>
                             </div>
@@ -116,8 +116,8 @@
         <footer>
             <center>
                 <div class="copyright">
-                    <h5 class="text-center">Copyright © 2024 <a href="https://telegram.dog/IM_JISSHU"><span
-                                style="font-weight: 700;">JISSHU DEVELOPER</span></a>. All
+                    <h5 class="text-center">Copyright © 2024 <a href="https://telegram.dog/Venom_is_alive"><span
+                                style="font-weight: 700;">𝕍𝕖𝕟𝕠𝕞 movies 𝕌𝕔𝕠𝕣𝕡™</span></a>. All
                         Rights Reserved.</h5>
                 </div>
             </center>
